# django-async-pydantic-example

./: LICENSE  README.md  pyproject.toml
django_router/: __init__.py  exceptions.py  routing.py  types.py  utils.py  views.py
django_router/rest_framework/: authentication.py  permissions.py
example/: manage.py  pyproject.toml
example/async_server/: asgi.py  settings.py  urls.py  wsgi.py
example/gpt/: models.py  views.py
example/polls/: schemas.py  urls.py  views.py
example/polls/migrations/: 0001_initial.py
